--- a/marketing/package.json
+++ b/marketing/package.json
@@ -10,15 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.6.5",
+    "@astrojs/sitemap": "^1.0.1",
+    "@astrojs/tailwind": "^3.0.1",
+    "@tailwindcss/typography": "^0.5.9",
+    "astro": "^2.0.5",
     "astro-icon": "^0.8.0",
-    "daisyui": "^2.39.0",
-    "luxon": "^3.1.0",
-    "prettier-plugin-astro": "^0.7.0",
-    "theme-change": "^2.2.0",
-    "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/tailwind": "^1.0.0",
-    "@tailwindcss/typography": "^0.5.7",
-    "postcss": "^8.4.16"
+    "daisyui": "^2.50.0",
+    "luxon": "^3.2.1",
+    "postcss": "^8.4.21",
+    "prettier-plugin-astro": "^0.8.0",
+    "theme-change": "^2.2.0"
   }
 }
