--- a/app/package.json
+++ b/app/package.json
@@ -8,75 +8,75 @@
     "url": "git+https://github.com/appcket/appcket-org.git"
   },
   "dependencies": {
-    "@mui/icons-material": "^5.11.16",
-    "@mui/lab": "^5.0.0-alpha.133",
-    "@mui/material": "^5.13.4",
-    "@mui/x-data-grid": "^6.6.0",
-    "@mui/system": "5.13.2",
-    "@tanstack/react-query": "^4.29.12",
-    "clsx": "^1.2.1",
-    "graphql": "^16.6.0",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/lab": "^5.0.0-alpha.145",
+    "@mui/material": "^5.14.10",
+    "@mui/x-data-grid": "^6.14.0",
+    "@mui/system": "5.14.10",
+    "@tanstack/react-query": "^4.35.3",
+    "clsx": "^2.0.0",
+    "graphql": "^16.8.0",
     "graphql-request": "^6.1.0",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
-    "oidc-client-ts": "^2.2.4",
+    "oidc-client-ts": "^2.2.5",
     "prop-types": "^15.8.1",
+    "rc-scrollbars": "1.1.6",
     "react": "^18.2.0",
-    "react-custom-scrollbars-2": "4.5.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.9",
+    "react-error-boundary": "^4.0.11",
     "react-helmet-async": "^1.3.0",
-    "react-hook-form": "^7.44.3",
-    "react-icons": "^4.9.0",
-    "react-oidc-context": "^2.2.2",
-    "react-router-dom": "^6.12.0",
+    "react-hook-form": "^7.46.1",
+    "react-icons": "^4.11.0",
+    "react-oidc-context": "^2.3.0",
+    "react-router-dom": "^6.16.0",
     "vite-plugin-svgr": "3.2.0",
-    "web-vitals": "^3.3.2",
-    "zustand": "^4.3.8",
-    "@babel/plugin-syntax-flow": "^7.21.4",
-    "@babel/plugin-transform-react-jsx": "^7.22.3",
-    "@emotion/react": "^11.11.0",
+    "web-vitals": "^3.4.0",
+    "zustand": "^4.4.1",
+    "@babel/plugin-syntax-flow": "^7.22.5",
+    "@babel/plugin-transform-react-jsx": "^7.22.15",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@tanstack/react-query-devtools": "^4.29.12",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@tanstack/react-query-devtools": "^4.35.3",
+    "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
+    "@testing-library/user-event": "^14.5.1",
     "@types/history": "5.0.0",
-    "@types/lodash": "^4.14.195",
+    "@types/lodash": "^4.14.198",
     "@types/node": "^18.7.13",
-    "@types/react": "^18.2.8",
-    "@types/react-dom": "^18.2.4",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "@types/react-helmet": "^6.1.6",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
-    "@vitejs/plugin-react": "^4.0.0",
-    "@vitest/ui": "^0.32.0",
-    "autoprefixer": "^10.4.14",
+    "@types/react-test-renderer": "^18.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "@vitejs/plugin-react": "^4.0.4",
+    "@vitest/ui": "^0.34.4",
+    "autoprefixer": "^10.4.15",
     "csstype": "^3.1.2",
-    "eslint": "^8.42.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-import-resolver-typescript": "^3.6.0",
     "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^5.11.0",
-    "happy-dom": "^9.20.3",
-    "postcss": "^8.4.24",
-    "prettier": "2.8.8",
+    "eslint-plugin-testing-library": "^6.0.1",
+    "happy-dom": "^12.0.1",
+    "postcss": "^8.4.29",
+    "prettier": "3.0.3",
     "react-test-renderer": "^18.2.0",
     "simple-zustand-devtools": "^1.1.0",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9",
-    "vitest": "^0.32.0",
-    "vite-tsconfig-paths": "^4.2.0"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.4",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "scripts": {
     "start": "vite",
