--- a/deployment/database/package.json
+++ b/deployment/database/package.json
@@ -5,21 +5,22 @@
   "license": "MIT",
   "author": "",
   "devDependencies": {
-    "@types/node": "^14.18.30",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "dotenv-cli": "^6.0.0",
-    "prettier": "^2.5.1",
-    "@mikro-orm/cli": "^5.9.0",
-    "@mikro-orm/core": "^5.9.0",
-    "@mikro-orm/entity-generator": "^5.9.0",
-    "@mikro-orm/migrations": "^5.9.0",
-    "@mikro-orm/postgresql": "^5.9.0",
-    "@mikro-orm/seeder": "^5.9.0",
-    "ts-loader": "^9.4.1",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
-    "typescript": "^4.9.1-beta"
+    "@types/node": "^20.9.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "dotenv-cli": "^7.3.0",
+    "@faker-js/faker": "8.3.1",
+    "prettier": "^3.2.4",
+    "@mikro-orm/cli": "^6.0.4",
+    "@mikro-orm/core": "^6.0.4",
+    "@mikro-orm/entity-generator": "^6.0.4",
+    "@mikro-orm/migrations": "^6.0.4",
+    "@mikro-orm/postgresql": "^6.0.4",
+    "@mikro-orm/seeder": "^6.0.4",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.3.3"
   },
   "scripts": {
     "schema-seed": "mikro-orm schema:fresh --run --seed",
