--- a/accounts/Dockerfile
+++ b/accounts/Dockerfile
@@ -1,16 +1,17 @@
-FROM quay.io/keycloak/keycloak:22.0.5 as builder
+FROM quay.io/keycloak/keycloak:23.0.6 as builder
 
 ENV KC_METRICS_ENABLED=true
-ENV KC_FEATURES=authorization,account2,account-api,client-policies,impersonation,token-exchange,upload-scripts
+ENV KC_FEATURES=authorization,account3,account-api,client-policies,impersonation,token-exchange
 ENV KC_DB=postgres
 RUN /opt/keycloak/bin/kc.sh build
 
-FROM quay.io/keycloak/keycloak:22.0.5
+FROM quay.io/keycloak/keycloak:23.0.6
 #ADD themes/appcket /opt/jboss/keycloak/themes/appcket
-COPY --from=builder /opt/keycloak/lib/quarkus/ /opt/keycloak/lib/quarkus/
+COPY --from=builder /opt/keycloak/ /opt/keycloak/
 WORKDIR /opt/keycloak
 
 COPY tls.crt /etc/x509/https/tls.crt
 COPY tls.key /etc/x509/https/tls.key
 
-ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start --optimized --proxy=edge --https-certificate-file=/etc/x509/https/tls.crt --https-certificate-key-file=/etc/x509/https/tls.key"]
+ENTRYPOINT ["/opt/keycloak/bin/kc.sh", "start"]
+CMD ["--optimized", "--proxy=edge", "--https-certificate-key-file=/etc/x509/https/tls.key", "--https-certificate-file=/etc/x509/https/tls.crt"]
