--- a/app/package.json
+++ b/app/package.json
@@ -3,81 +3,83 @@
   "version": "0.1.0",
   "license": "MIT",
   "homepage": "https://github.com/appcket/appcket-org/app",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/appcket/appcket-org.git"
   },
   "dependencies": {
-    "@mui/icons-material": "^5.14.18",
-    "@mui/lab": "^5.0.0-alpha.153",
-    "@mui/material": "^5.14.18",
-    "@mui/x-data-grid": "^6.18.1",
-    "@mui/system": "5.14.18",
-    "@tanstack/react-query": "^5.8.4",
-    "clsx": "^2.0.0",
-    "graphql": "^16.8.1",
-    "graphql-request": "^6.1.0",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/lab": "^6.0.0-beta.14",
+    "@mui/material": "^6.1.6",
+    "@mui/x-data-grid": "^7.22.1",
+    "@mui/system": "6.1.6",
+    "@tanstack/react-query": "^5.59.20",
+    "clsx": "^2.1.1",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.2",
     "history": "^5.3.0",
-    "@textea/json-viewer": "^3.2.3",
+    "@textea/json-viewer": "^4.0.0",
     "lodash": "^4.17.21",
     "notistack": "^3.0.1",
-    "oidc-client-ts": "^2.4.0",
+    "oidc-client-ts": "^3.1.0",
     "prop-types": "^15.8.1",
     "rc-scrollbars": "1.1.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.11",
-    "react-helmet-async": "^2.0.1",
-    "react-hook-form": "^7.48.2",
-    "react-icons": "^4.12.0",
-    "react-oidc-context": "^2.3.0",
-    "react-router-dom": "^6.20.0",
-    "vite-plugin-svgr": "4.2.0",
-    "web-vitals": "^3.5.0",
-    "zustand": "^4.4.6",
-    "@babel/plugin-syntax-flow": "^7.23.3",
-    "@babel/plugin-transform-react-jsx": "^7.23.4",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@tanstack/react-query-devtools": "^5.8.4",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.53.1",
+    "react-icons": "^5.3.0",
+    "react-oidc-context": "^3.2.0",
+    "react-router-dom": "^6.28.0",
+    "vite-plugin-svgr": "4.3.0",
+    "web-vitals": "^4.2.4",
+    "zustand": "^5.0.1",
+    "@babel/plugin-syntax-flow": "^7.26.0",
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@tanstack/react-query-devtools": "^5.59.20",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/history": "5.0.0",
-    "@types/lodash": "^4.14.202",
-    "@types/node": "^20.9.4",
-    "@types/react": "^18.2.38",
-    "@types/react-dom": "^18.2.17",
-    "@types/react-helmet": "^6.1.9",
+    "@types/lodash": "^4.17.13",
+    "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-test-renderer": "^18.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "@vitest/ui": "^0.34.6",
-    "autoprefixer": "^10.4.16",
-    "csstype": "^3.1.2",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
+    "@types/react-test-renderer": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
+    "@vitejs/plugin-react": "^4.3.3",
+    "@vitest/ui": "^2.1.4",
+    "autoprefixer": "^10.4.20",
+    "csstype": "^3.1.3",
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.29.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-testing-library": "^6.2.0",
-    "happy-dom": "^12.10.3",
-    "postcss": "^8.4.31",
-    "prettier": "3.1.0",
-    "react-test-renderer": "^18.2.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-testing-library": "^6.4.0",
+    "happy-dom": "^15.11.0",
+    "postcss": "^8.4.47",
+    "prettier": "3.3.3",
+    "react-test-renderer": "^18.3.1",
     "simple-zustand-devtools": "^1.1.0",
-    "tailwindcss": "^3.3.5",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.2",
-    "vitest": "^0.34.6",
-    "vite-tsconfig-paths": "^4.2.1"
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10",
+    "vitest": "^2.1.4",
+    "vite-tsconfig-paths": "^5.1.0"
   },
   "scripts": {
     "start": "vite",
