--- a/app/package.json
+++ b/app/package.json
@@ -9,81 +9,85 @@
     "url": "git+https://github.com/appcket/appcket-org.git"
   },
   "dependencies": {
-    "@mui/icons-material": "^6.1.9",
-    "@mui/lab": "^6.0.0-beta.17",
-    "@mui/material": "^6.1.9",
-    "@mui/x-data-grid": "^7.22.3",
-    "@mui/system": "6.1.9",
-    "@tanstack/react-query": "^5.61.5",
-    "@textea/json-viewer": "^4.0.0",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/lab": "^7.0.0-beta.14",
+    "@mui/material": "^7.2.0",
+    "@mui/x-data-grid": "^8.6.0",
+    "@mui/system": "7.2.0",
+    "@tanstack/react-query": "^5.81.5",
+    "@textea/json-viewer": "^4.0.1",
     "clsx": "^2.1.1",
-    "graphql": "^16.9.0",
-    "graphql-request": "^7.1.2",
+    "graphql": "^16.11.0",
+    "graphql-request": "^7.2.0",
     "history": "^5.3.0",
-    "i18next": "^24.0.5",
-    "i18next-http-backend": "^3.0.1",
-    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next": "^25.3.0",
+    "i18next-http-backend": "^3.0.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lodash": "^4.17.21",
-    "notistack": "^3.0.1",
-    "oidc-client-ts": "^3.1.0",
+    "notistack": "^3.0.2",
+    "oidc-client-ts": "^3.3.0",
     "prop-types": "^15.8.1",
     "rc-scrollbars": "1.1.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-error-boundary": "^4.1.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-error-boundary": "^6.0.0",
     "react-helmet-async": "^2.0.5",
-    "react-hook-form": "^7.53.1",
-    "react-i18next": "^15.1.3",
-    "react-icons": "^5.4.0",
+    "react-hook-form": "^7.59.0",
+    "react-i18next": "^15.5.3",
+    "react-icons": "^5.5.0",
     "react-flagpack": "^2.0.6",
-    "react-oidc-context": "^3.2.0",
-    "react-router-dom": "^6.28.0",
+    "react-oidc-context": "^3.3.0",
+    "react-router-dom": "^7.6.3",
     "vite-plugin-svgr": "4.3.0",
-    "web-vitals": "^4.2.4",
-    "zustand": "^5.0.1",
-    "@babel/plugin-syntax-flow": "^7.26.0",
-    "@babel/plugin-transform-react-jsx": "^7.25.9",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@tanstack/react-query-devtools": "^5.59.20",
+    "web-vitals": "^5.0.3",
+    "zustand": "^5.0.6"
+  },
+  "devDependencies": {
+    "@babel/plugin-syntax-flow": "^7.27.1",
+    "@babel/plugin-transform-react-jsx": "^7.27.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@tanstack/react-query-devtools": "^5.81.5",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/history": "5.0.0",
-    "@types/lodash": "^4.17.13",
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^22.15.18",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/react-helmet": "^6.1.11",
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-test-renderer": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.13.0",
-    "@typescript-eslint/parser": "^8.13.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/ui": "^2.1.8",
-    "autoprefixer": "^10.4.20",
+    "@types/react-test-renderer": "^19.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
+    "@vitejs/plugin-react": "^4.6.0",
+    "@vitest/ui": "^3.2.4",
+    "autoprefixer": "^10.4.21",
     "csstype": "^3.1.3",
-    "eslint": "^9.14.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-testing-library": "^6.4.0",
-    "happy-dom": "^15.11.0",
-    "postcss": "^8.4.47",
-    "prettier": "3.3.3",
-    "react-test-renderer": "^18.3.1",
+    "eslint-plugin-prettier": "^5.5.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-testing-library": "^7.5.3",
+    "happy-dom": "^18.0.1",
+    "postcss": "^8.5.6",
+    "prettier": "3.6.2",
+    "react-test-renderer": "^19.1.0",
     "simple-zustand-devtools": "^1.1.0",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3",
-    "vite": "^6.0.3",
-    "vitest": "^2.1.8",
+    "tailwindcss": "^4.1.11",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.11",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
+    "vitest": "^3.2.4",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "scripts": {
