--- a/marketing/package.json
+++ b/marketing/package.json
@@ -1,24 +1,34 @@
 {
   "name": "appcket-marketing",
+  "type": "module",
   "version": "0.0.1",
-  "private": true,
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/sitemap": "^1.3.3",
-    "@astrojs/tailwind": "^3.1.3",
-    "@tailwindcss/typography": "^0.5.7",
-    "astro": "^2.6.0",
-    "astro-icon": "^0.8.0",
-    "daisyui": "^3.0.3",
-    "luxon": "^3.3.0",
-    "postcss": "^8.4.24",
-    "prettier-plugin-astro": "^0.10.0",
-    "theme-change": "^2.5.0"
+    "@astrojs/mdx": "^4.3.0",
+    "@astrojs/react": "^4.3.0",
+    "@fontsource/arvo": "^5.2.6",
+    "@fontsource/oxygen": "^5.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/vite": "^4.1.11",
+    "@types/canvas-confetti": "^1.9.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "astro": "^5.10.2",
+    "canvas-confetti": "^1.9.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11"
+  },
+  "devDependencies": {
+    "tw-animate-css": "^1.3.4"
   }
 }
