--- a/marketing/package.json
+++ b/marketing/package.json
@@ -10,25 +10,26 @@
     "test": "node ./tests/getLoginUrl.test.js"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.3.7",
-    "@astrojs/react": "^4.4.0",
+    "@astrojs/mdx": "^4.3.9",
+    "@astrojs/react": "^4.4.1",
     "@fontsource/arvo": "^5.2.7",
     "@fontsource/oxygen": "^5.2.8",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
-    "@tailwindcss/vite": "^4.1.14",
+    "@tailwindcss/vite": "^4.1.16",
     "@types/canvas-confetti": "^1.9.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
-    "astro": "^5.14.3",
-    "canvas-confetti": "^1.9.3",
+    "astro": "^5.15.2",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.545.0",
+    "lucide-react": "^0.548.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^4.1.16",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
