--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.3.4",
     "@mui/x-data-grid": "^8.15.0",
     "@mui/system": "7.3.3",
+    "@mui/types": "^7.4.8",
     "@tanstack/react-query": "^5.90.5",
     "@textea/json-viewer": "^4.0.1",
     "clsx": "^2.1.1",
@@ -83,7 +84,7 @@
     "@tailwindcss/vite": "^4.1.16",
     "typescript": "^5.9.3",
     "vite": "^7.1.12",
-    "vitest": "^4.0.4",
+    "vitest": "^4.0.7",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "scripts": {
