--- a/api/.vscode/extensions.json
+++ b/api/.vscode/extensions.json
@@ -1,3 +1,3 @@
 {
-  "recommendations": ["esbenp.prettier-vscode", "orta.vscode-jest"]
+  "recommendations": ["prettier.prettier-vscode", "orta.vscode-jest"]
 }
