--- a/app/.vscode/extensions.json
+++ b/app/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
   "recommendations": [
     "dbaeumer.vscode-eslint",
-    "esbenp.prettier-vscode",
+    "prettier.prettier-vscode",
     "csstools.postcss",
     "bradlc.vscode-tailwindcss",
     "editorconfig.editorconfig"
