--- a/marketing/.vscode/extensions.json
+++ b/marketing/.vscode/extensions.json
@@ -1,4 +1,4 @@
 {
-  "recommendations": ["astro-build.astro-vscode", "esbenp.prettier-vscode"],
+  "recommendations": ["astro-build.astro-vscode", "prettier.prettier-vscode"],
   "unwantedRecommendations": []
 }
